--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,172 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "roboto";
+  src: url("assets/roboto.woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  margin: 0;
+  font-family: "roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: normal;
+  background-color: #1e1e1e;
+  color: #fff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
+  max-width: 1810px;
+}
+
+.btn-reset {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: inherit;
+}
+
+.link-reset {
+  text-decoration: none;
+  color: inherit;
+}
+
+.list-reset {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.news {
+  padding: 30px 0;
+  width: 100vw;
+  height: 100vh;
+}
+.news__wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.news__title {
+  margin: 0;
+  margin-bottom: 15px;
+  font-size: 46px;
+  line-height: normal;
+  font-weight: 400;
 }
 
-.App-link {
-  color: #61dafb;
+.news__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 40px;
+  width: 100%;
+  max-width: 1050px;
+}
+.news__select {
+  width: 180px;
+}
+.news__search {
+  width: 730px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.news__blocks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
+.news__block {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-bottom: 20px;
+  width: 100%;
+  min-height: 300px;
+  position: relative;
+}
+.news__block::after {
+  position: absolute;
+  content: "";
+  width: 95%;
+  border-top: 2px solid #fff;
+  left: 50%;
+  bottom: -10px;
+  transform: translateX(-50%);
+}
+.news__block:last-child::after {
+  display: none;
+}
+
+.news__inner-photo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 15px;
+}
+.news__image {
+  margin-bottom: 10px;
+  width: 250px;
+  height: auto;
+}
+.news__date {
+  margin-bottom: 10px;
+}
+.news__link {
+  font-size: 18px;
+  position: relative;
+}
+.news__link::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  border-top: 2px solid #fff;
+  bottom: -2px;
+  left: 0;
+  transition: all 0.4s;
+}
+.news__link:hover::after {
+  left: 50%;
+  width: 0;
+}
+
+.news__content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.news__heading {
+  margin: 0;
+  margin-bottom: 10px;
+  font-size: 30px;
+  line-height: normal;
+}
+.news__subtitle {
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 26px;
+  line-height: normal;
+}
+.news__text {
+  margin: 0;
+  font-size: 18px;
+  line-height: normal;
+}/*# sourceMappingURL=App.css.map */
