--- a/src/App.scss
+++ b/src/App.scss
@@ -6,5 +6,5 @@
 @import "scss/chunk/main";
 @import "scss/chunk/search";
 @import "scss/chunk/blocks";
-@import "scss/chunk/photo";
+@import "scss/chunk/_newsinformation";
 @import "scss/chunk/content";
