--- a/src/scss/chunk/_blocks.scss
+++ b/src/scss/chunk/_blocks.scss
@@ -4,6 +4,9 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    height: 100%;
+    max-height: 75vh;
+    overflow-y: auto;
   }
 
   &__block {
