--- a/src/scss/chunk/_search.scss
+++ b/src/scss/chunk/_search.scss
@@ -5,7 +5,7 @@
     align-items: center;
     margin-bottom: 40px;
     width: 100%;
-    max-width: 1050px;
+    max-width: 1250px;
   }
 
   &__select {
@@ -14,5 +14,12 @@
 
   &__search {
     width: 730px;
+  }
+
+  &__featured-button {
+    padding: 10px 20px;
+    text-decoration: none;
+    color: white;
+    border: 2px solid white;
   }
 }
